syntax = "proto3";

message Metadata {
    string fileHash     = 1;
    string fileName     = 2;
    string fileExt      = 3;
    float fileSize      = 4;

    float chunkSize     = 5;
    float chunkNum      = 6;
    string chunkID      = 7;
}

// message Content {
//     bytes   content     = 1;
// }

message Datachunk {
    // Metadata header     = 1;
    string fileHash     = 1;
    string fileName     = 2;
    string fileExt      = 3;
    float fileSize      = 4;

    float chunkSize     = 5;
    uint64 chunkNum      = 6;
    string chunkID      = 7;


    bytes body          = 8;
}

